--- a/www/partials/playlists.html
+++ b/www/partials/playlists.html
@@ -1,2 +1,39 @@
 <h1>Les playlists <small>/ Liste <span ng-show="playlists">({{ (playlists | filter:search).length }})</span></small></h1>
 <hr />
+
+<div class="alert alert-warning alert-dismissible" role="alert" ng-show="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Warning!</strong>{{ alert }}
+</div>
+
+<p>
+  <a href="playlists/ajouter" class="btn btn-default">Ajouter une playlist</a>
+</p>
+
+<div class="alert alert-info" role="alert" ng-hide="loaded">
+  <p class="loading">Chargement en cours, merci de patienter...</p>
+</div>
+<div class="alert alert-info" role="alert" ng-show="(playlists | filter:search).length == 0">
+  <p>Aucun résultat<span ng-show="search">, veuillez élargir la recherche</span>.</p>
+</div>
+
+<div class="col-sm-3" ng-repeat="playlist in playlists">
+  <div class="panel panel-danger">
+    <div class="panel-heading">
+      <h3 class="panel-title clearfix">
+        <span class="pull-left">{{ playlist.title }}</span>
+        <a ng-href="playlists/editer/{{ playlist.id }}" class="btn btn-xs btn-default pull-right">Editer</a>
+        <a ng-click="addtoPlaylist(playlist)" class="btn btn-xs btn-default pull-right">Ajouter à l'écoute</a>
+      </h3>
+    </div>
+    <table class="table table-condensed table-striped">
+      <tbody>
+        <tr ng-repeat="musique in playlist.musiques">
+          <td music-player="play" add-song="musique">{{ musique.title }}</td>
+          <td music-player="play" add-song="musique">{{ musique.artist }}</td>
+          <td>{{ musique.length | secondsToDateTime | date:'mm:ss' }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
