--- a/www/partials/musique-form.html
+++ b/www/partials/musique-form.html
@@ -28,7 +28,7 @@
   </div>
   <div class="form-group">
     <label>Lien</label>
-    <input type="url" class="form-control" placeholder="Lien" ng-model="musique.link">
+    <input type="url" class="form-control" placeholder="Lien" ng-model="musique.url">
   </div>
 
   <div class="pull-right">
