--- a/www/partials/inscription.html
+++ b/www/partials/inscription.html
@@ -1,16 +1,19 @@
 <div class="col-md-6 col-md-offset-3">
-  <form role="form" name="loginForm" ng-submit="login(utilisateur)" class="form-signin">
+  <form role="form" name="inscriptionForm" ng-submit="inscription(utilisateur)" class="form-signin">
     <h1><img src="img/logo.png" height="80" /> MyMusic</h1>
-    <p>Remplissez le formulaire ci-dessous pour vous connecter.</p>
+    <p>Remplissez le formulaire ci-dessous pour vous inscrire.</p>
     <div class="alert alert-danger" role="alert" ng-show="loginMessage">
-      <p>{{ loginMessage }}</p>
+      <p>{{ inscriptionMessage }}</p>
     </div>
     <div class="form-group">
       <input type="email" class="form-control" placeholder="Email" ng-model="utilisateur.email"/>
     </div>
     <div class="form-group">
+      <input type="text" class="form-control" placeholder="Pseudo" ng-model="utilisateur.pseudo"/>
+    </div>
+    <div class="form-group">
       <input type="password" class="form-control" placeholder="Mot de passe" ng-model="utilisateur.password"/>
     </div>
-    <input type="submit" value="S'identifier" class="btn btn-lg btn-block btn-primary" />
+    <input type="submit" value="S'inscrire" class="btn btn-lg btn-block btn-primary" />
   </form>
 </div>
