--- a/www/partials/playlists.html
+++ b/www/partials/playlists.html
@@ -6,7 +6,7 @@
   <strong>Warning!</strong>{{ alert }}
 </div>
 
-<p>
+<p ng-show="isLogged">
   <a href="playlists/ajouter" class="btn btn-default">Ajouter une playlist</a>
 </p>
 
@@ -22,7 +22,7 @@
     <div class="panel-heading">
       <h3 class="panel-title clearfix">
         <span class="pull-left">{{ playlist.title }}</span>
-        <a ng-href="playlists/editer/{{ playlist.id }}" class="btn btn-xs btn-default pull-right">Editer</a>
+        <a ng-show="playlist.utilisateur.id === utilisateur.id" ng-href="playlists/editer/{{ playlist.id }}" class="btn btn-xs btn-default pull-right">Editer</a>
         <a ng-click="addtoPlaylist(playlist)" class="btn btn-xs btn-default pull-right">Ajouter à l'écoute</a>
       </h3>
     </div>
