--- a/www/partials/playlist-form.html
+++ b/www/partials/playlist-form.html
@@ -68,7 +68,8 @@
         <td>
           <div class="col-xs-6 col-md-3">
             <a class="thumbnail">
-              <img height="20px" check-image ng-src="{{ musique.image }}">
+              <img ng-if="musique.image" height="20px" ng-src="{{ musique.image }}">
+              <img ng-if="!musique.image" height="20px" src="img/no-media.gif">
             </a>
           </div>
         </td>
@@ -95,16 +96,3 @@
     <input type="submit" value="Valider" class="btn btn-primary"/>
   </div>
 </form>
-
-<script>
-  $("#musiqueImage").fileinput({
-    initialPreview: [
-    '<img src="{{musique.image}}" height="200" width="400">'
-    ],
-    language: "fr",
-    allowedFileTypes: ["image"],
-    showRemove: false,
-    showUpload: false,
-    overwriteInitial: true
-  });
-</script>
