[UPDATE] - big update

--- a/partials/identification.html
+++ b/partials/identification.html
@@ -2,6 +2,9 @@
   <form role="form" name="loginForm" ng-submit="login(utilisateur)" class="form-signin">
     <h1><img src="img/logo.png" height="80" /> MyMusic</h1>
     <p>Remplissez le formulaire ci-dessous pour vous connecter.</p>
+    <a href="inscription">Créer un nouveau compte</a>
+    <br/>
+    <br/>
     <div class="alert alert-danger" role="alert" ng-show="loginMessage">
       <p>{{ loginMessage }}</p>
     </div>
