--- a/partials/musique-form.html
+++ b/partials/musique-form.html
@@ -20,7 +20,7 @@
   </div>
   <div class="form-group">
     <label>Vignette</label>
-    <input id="musiqueImage" file-model="musiqueImage" type="file" class="file-loading">
+    <input id="musiqueImage" file-model="musique.cover" type="file" class="file-loading">
   </div>
   <div class="form-group">
     <label>Artiste</label>
@@ -29,6 +29,10 @@
   <div class="form-group">
     <label>Lien</label>
     <input type="url" class="form-control" placeholder="Lien" ng-model="musique.url">
+  </div>
+  <div class="form-group">
+    <label>Fichier</label>
+    <input id="musiqueFichier" file-model="musique.file" type="file" class="file-loading">
   </div>
   <div class="form-group">
     <label>Etat</label>
@@ -45,10 +49,17 @@
 <script>
   $("#musiqueImage").fileinput({
     initialPreview: [
-      '<img src="{{musique.image}}" height="200" width="200">'
+      '<img src="{{ musique.image }}" height="200" width="200">'
     ],
     language: "fr",
     allowedFileTypes: ["image"],
+    showRemove: false,
+    showUpload: false,
+    overwriteInitial: true
+  });
+  $("#musiqueFichier").fileinput({
+    language: "fr",
+    allowedFileTypes: ["audio"],
     showRemove: false,
     showUpload: false,
     overwriteInitial: true
