--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,3 +23,7 @@ li {
 .thumbnail{
   width: 90px;
 }
+
+*[ng-click], *[music-player], *[add-song], *[remove-from-playlist], *[play-from-playlist], *[seek-track]{
+  cursor: pointer;
+}
