[FIX] - fix de bug / ajout spinner musique / ajout verif / ajout d'un etat

--- a/partials/playlist-form.html
+++ b/partials/playlist-form.html
@@ -19,8 +19,12 @@
     <input type="text" class="form-control" placeholder="Titre" ng-model="playlist.title">
   </div>
   <div class="form-group">
-    <label>Status</label>
-    <input type="number" class="form-control" placeholder="Status" ng-model="playlist.status">
+    <label>Etat</label>
+    <br/>
+    <div class="btn-group" data-toggle="buttons">
+        <input type="radio" ng-model="playlist.state" ng-value="1" integer checked="checked"> Public
+        <input type="radio" ng-model="playlist.state" ng-value="0" integer> Privé
+    </div>
   </div>
 
   <div class="form-group">
@@ -95,4 +99,5 @@
     <a class="btn btn-danger" ng-if="action == 'add'" ng-click="reinitialiser()" ng-confirm-click="Êtes-vous sûr de vouloir tout effacer ?">Ré-initialiser</a>
     <input type="submit" value="Valider" class="btn btn-primary"/>
   </div>
+  <br/><br/><br/>
 </form>
