--- a/partials/musique-form.html
+++ b/partials/musique-form.html
@@ -1,10 +1,16 @@
 
 <h1>Musique <small>/ <span ng-if="action == 'add'">Ajouter</span><span ng-if="action == 'edit'">Édition de la musique &laquo; {{ musique.title }} &raquo;</span></small></h1>
+<strong>Si vous ne remplissez pas les champs, les données du fichier mp3 seront mise à la place.</strong>
 <hr />
 
 <div class="alert alert-warning alert-dismissible" role="alert" ng-show="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Warning!</strong>{{ alert }}
+  <strong>Warning!</strong> {{ alert }}
+</div>
+
+<div class="alert alert-success alert-dismissible" role="alert" ng-show="success">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Success!</strong> Votre musique a bien été importé.
 </div>
 
 <form role="form" class="form-horizontal" ng-submit="submitForm()">
@@ -28,7 +34,12 @@
   </div>
   <div class="form-group">
     <label>Lien</label>
-    <input type="url" class="form-control" placeholder="Lien" ng-model="musique.url">
+    <input type="url" class="form-control" placeholder="Lien" ng-model="musique.url"
+    uib-tooltip="Un lien Youtube ou un lien vers le fichier mp3."
+    tooltip-placement="top"
+    tooltip-trigger="'mouseenter'"
+    tooltip-enable="!musique.url"
+    >
   </div>
   <div class="form-group">
     <label>Fichier</label>
@@ -36,14 +47,24 @@
   </div>
   <div class="form-group">
     <label>Etat</label>
-    <input type="number" class="form-control" placeholder="Etat" ng-model="musique.etat">
+    <br/>
+    <div class="btn-group" data-toggle="buttons">
+        <input type="radio" ng-model="musique.state" ng-value="1" integer checked="checked"> Public
+        <input type="radio" ng-model="musique.state" ng-value="0" integer> Privé
+    </div>
   </div>
+
   <div class="pull-right">
+    <span ng-show="submitted">
+      <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
+      <span class="sr-only">Loading...</span>
+    </span>
     <a href="musique" class="btn btn-default" ng-confirm-click="Êtes-vous sûr de vouloir annuler ?">Annuler</a>
     <a ng-if="action == 'edit'" class="btn btn-danger" ng-click="delete()" ng-confirm-click="Êtes-vous sûr de vouloir supprimer ?">Supprimer</a>
     <a class="btn btn-danger" ng-if="action == 'add'" ng-click="reinitialiser()" ng-confirm-click="Êtes-vous sûr de vouloir tout effacer ?">Ré-initialiser</a>
     <input type="submit" value="Valider" class="btn btn-primary"/>
   </div>
+  <br/><br/><br/>
 </form>
 
 <script>
