--- a/partials/musique-form.html
+++ b/partials/musique-form.html
@@ -1,7 +1,7 @@
 
 <h1>Musique <small>/ <span ng-if="action == 'add'">Ajouter</span><span ng-if="action == 'edit'">Édition de la musique &laquo; {{ musique.title }} &raquo;</span></small></h1>
-<strong>Si vous ne remplissez pas les champs, les données du fichier mp3 seront mise à la place.</strong>
-<hr />
+<strong ng-if="action == 'add'">Si vous ne remplissez pas les champs, les données du fichier mp3 seront mise à la place lors de l'ajout.</strong>
+<hr/>
 
 <div class="alert alert-warning alert-dismissible" role="alert" ng-show="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -13,37 +13,34 @@
   <strong>Success!</strong> Votre musique a bien été importé.
 </div>
 
-<form role="form" class="form-horizontal" ng-submit="submitForm()">
-  <span ng-if="action == 'edit'">
-    <div class="form-group">
-      <label>ID</label>
-      <input type="text" class="form-control" placeholder="ID" ng-model="musique.id" ng-disabled="action == 'edit'">
-    </div>
-  </span>
+<form role="form" ng-submit="submitForm()">
+  <div class="form-group" ng-if="action == 'edit'">
+    <label>ID</label>
+    <input type="text" class="form-control" placeholder="ID" ng-model="musique.id" ng-disabled="action == 'edit'">
+  </div>
   <div class="form-group">
-    <label>Titre</label>
-    <input type="text" class="form-control" placeholder="Titre" ng-model="musique.title">
+    <label>Titre <span ng-if="action == 'edit'">*</span></label>
+    <input type="text" class="form-control" placeholder="Titre" ng-model="musique.title" ng-required="action == 'edit'">
   </div>
   <div class="form-group">
     <label>Vignette</label>
-    <input id="musiqueImage" file-model="musique.cover" type="file" class="file-loading">
+    <input id="musiqueImage" file-model="musique.cover" placeholder="Cover" type="file" class="file-loading">
   </div>
   <div class="form-group">
-    <label>Artiste</label>
-    <input type="text" class="form-control" placeholder="Artiste" ng-model="musique.artist">
+    <label>Artiste <span ng-if="action == 'edit'">*</span></label>
+    <input type="text" class="form-control" placeholder="Artiste" ng-model="musique.artist" ng-required="action == 'edit'">
   </div>
   <div class="form-group">
     <label>Lien</label>
     <input type="url" class="form-control" placeholder="Lien" ng-model="musique.url"
-    uib-tooltip="Un lien Youtube ou un lien vers le fichier mp3."
+    uib-tooltip="Un lien Youtube ou un lien vers un fichier mp3."
     tooltip-placement="top"
     tooltip-trigger="'mouseenter'"
-    tooltip-enable="!musique.url"
-    >
+    tooltip-enable="!musique.url">
   </div>
   <div class="form-group">
     <label>Fichier</label>
-    <input id="musiqueFichier" file-model="musique.file" type="file" class="file-loading">
+    <input id="musiqueFichier" file-model="musique.file" placeholder="Fichier" type="file" class="file-loading">
   </div>
   <div class="form-group">
     <label>Etat</label>
@@ -60,7 +57,7 @@
       <span class="sr-only">Loading...</span>
     </span>
     <a href="musique" class="btn btn-default" ng-confirm-click="Êtes-vous sûr de vouloir annuler ?">Annuler</a>
-    <a ng-if="action == 'edit'" class="btn btn-danger" ng-click="delete()" ng-confirm-click="Êtes-vous sûr de vouloir supprimer ?">Supprimer</a>
+    <a ng-if="action == 'edit'" class="btn btn-danger">Supprimer</a>
     <a class="btn btn-danger" ng-if="action == 'add'" ng-click="reinitialiser()" ng-confirm-click="Êtes-vous sûr de vouloir tout effacer ?">Ré-initialiser</a>
     <input type="submit" value="Valider" class="btn btn-primary"/>
   </div>
