--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,13 +4,13 @@
 }
 .navbar-form .glyphicon-remove {
   float: right;
-  top: -25px;
-  right: 7px;
+  top: 10px;
+  right: 22px;
   cursor: pointer;
 }
 
 .dropdown-menu .btn {
-    text-align: left;
+  text-align: left;
 }
 
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
@@ -24,6 +24,14 @@ li {
   width: 90px;
 }
 
-*[ng-click], *[music-player], *[add-song], *[remove-from-playlist], *[play-from-playlist], *[seek-track]{
+*[ng-click], *[music-player], *[add-song], *[remove-from-playlist], *[play-from-playlist], *[seek-track], *[ui-sortable]{
   cursor: pointer;
+}
+
+.table-panel-player{
+  overflow-y:auto;
+  height:200px;
+  table{
+    table-layout:fixed;
+  }
 }
