--- a/partials/musique-form.html
+++ b/partials/musique-form.html
@@ -10,7 +10,7 @@
 
 <div class="alert alert-success alert-dismissible" role="alert" ng-show="success">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Success!</strong> Votre musique a bien été importé.
+  <strong>Success!</strong> Votre musique a bien été importé/modifé.
 </div>
 
 <form role="form" ng-submit="submitForm()">
