--- a/partials/playlist-form.html
+++ b/partials/playlist-form.html
@@ -7,6 +7,11 @@
   <strong>Warning!</strong>{{ alert }}
 </div>
 
+<div class="alert alert-success alert-dismissible" role="alert" ng-show="success">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Success!</strong> Votre playlist a bien été importé/modifé.
+</div>
+
 <form role="form" ng-submit="submitForm()">
   <div class="form-group" ng-if="action == 'edit'">
     <label>ID</label>
