--- a/partials/home.html
+++ b/partials/home.html
@@ -2,7 +2,7 @@
 <hr/>
 
 <div class="col-sm-6">
-  <panel-musique title="'Dernières musiques'" class="'panel-danger'" musiques="musiques" order-by-field="'-id'" sort-reverse="false" limit="10" search="search"></panel-musique>
+  <panel-musique title="'Dernières musiques'" class="'panel-danger'" musiques="musiques" order-by-field="'-created_at'" sort-reverse="false" limit="10" search="search"></panel-musique>
 </div>
 <div class="col-sm-6">
   <panel-musique title="'Musiques les plus écoutées'" class="'panel-info'" musiques="musiques" order-by-field="'-listen'" sort-reverse="false" limit="10" search="search"></panel-musique>
