--- a/partials/musiques.html
+++ b/partials/musiques.html
@@ -11,4 +11,4 @@
   <button play-all="musiques" class="btn btn-default">Ajouter toutes les musiques au direct</button>
 </p>
 
-<table-musique musiques="musiques" order-by-field="'-listen'" sort-reverse="false" search="search"></table-musique>
+<table-musique musiques="musiques" order-by-field="orderByField" sort-reverse="false" search="search"></table-musique>
