--- a/partials/playlist-form.html
+++ b/partials/playlist-form.html
@@ -18,11 +18,11 @@
     <input type="text" class="form-control" placeholder="ID" ng-model="playlist.id" ng-disabled="action == 'edit'">
   </div>
   <div class="form-group">
-    <label>Titre</label>
+    <label>Titre *</label>
     <input type="text" class="form-control" placeholder="Titre" ng-model="playlist.title" required="required">
   </div>
   <div class="form-group">
-    <label>Etat</label>
+    <label>Etat *</label>
     <br/>
     <div class="btn-group" data-toggle="buttons">
         <input type="radio" ng-model="playlist.state" ng-value="1" integer checked="checked"> Public
@@ -31,10 +31,13 @@
   </div>
 
   <div class="form-group">
-    <label>Liste des musiques *</label>
+    <label>Liste des musiques</label>
+    <div class="form-group">
+      <input type="search" class="form-control" placeholder="Rechercher" ng-model="search">
+    </div>
     <div class="row">
       <div class="col-md-10">
-        <select size="10" class="form-control ng-pristine ng-valid" ng-model="musiqueItems" ng-multiple="true" multiple="true" ng-options="(musique.title+' - '+musique.artist) group by musique.title[0] for musique in musiques track by musique.id"></select>
+        <select size="10" class="form-control ng-pristine ng-valid" ng-model="musiqueItems" ng-multiple="true" multiple="true" ng-options="musique as (musique.title+' - '+musique.artist) group by musique.title[0] for musique in musiques | filter:search track by musique.id"></select>
       </div>
       <div class="col-md-2">
         <button type="button" class="btn btn-default" aria-label="Ajouter une musique" ng-click="addMusiqueList(musiqueItems)">
@@ -49,7 +52,8 @@
   </div>
 
   <div class="form-group">
-    <label>La playlist</label>
+    <label>La playlist (une musique minimum) *</label>
+    <br/>
     <table class="table table-bordered table-condensed">
       <thead>
         <tr>
