[SOUNDCLOUD] - ajout de l'import depuis soundcloud

--- a/partials/musique-form.html
+++ b/partials/musique-form.html
@@ -33,7 +33,7 @@
   <div class="form-group">
     <label>Lien</label>
     <input type="url" class="form-control" placeholder="Lien" ng-model="musique.url"
-    uib-tooltip="Un lien Youtube ou un lien vers un fichier mp3."
+    uib-tooltip="Un lien Youtube, SoundCloud ou un lien vers un fichier mp3."
     tooltip-placement="top"
     tooltip-trigger="'mouseenter'"
     tooltip-enable="!musique.url">
