--- a/partials/playlist-form.html
+++ b/partials/playlist-form.html
@@ -97,10 +97,19 @@
         </td>
         </tr>
       </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="6"><b>{{ playlist.musiques | sumOfValue:'length' | secondsToDateTime | date:'mm:ss' }} d'écoute</b></td>
+        </tr>
+      </tfoot>
     </table>
   </div>
 
   <div class="pull-right">
+    <span ng-show="submitted">
+      <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
+      <span class="sr-only">Loading...</span>
+    </span>
     <a href="musique" class="btn btn-default" ng-confirm-click="Êtes-vous sûr de vouloir annuler ?">Annuler</a>
     <a ng-if="action == 'edit'" class="btn btn-danger" ng-click="delete()" ng-confirm-click="Êtes-vous sûr de vouloir supprimer ?">Supprimer</a>
     <a class="btn btn-danger" ng-if="action == 'add'" ng-click="reinitialiser()" ng-confirm-click="Êtes-vous sûr de vouloir tout effacer ?">Ré-initialiser</a>
