[FIX] - ajout affichage random + button vider le direct

--- a/partials/components/player.html
+++ b/partials/components/player.html
@@ -53,8 +53,8 @@
 <div class="col-md-6 col-sm-12">
   <br/>
   <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h3 class="panel-title clearfix"><span class="pull-left">En direct</span></h3>
+    <div class="panel-heading panel-heading-player">
+      <h3 class="panel-title clearfix"><span class="pull-left">En direct</span> <a clear-playlist class="btn btn-xs btn-default pull-right">Effacer le direct</a></h3>
     </div>
     <div class="table-panel-player">
       <table class="table table-condensed table-striped header-fixed">
