Feat: search seaction on youtube + soundcloud

--- a/partials/components/menu.html
+++ b/partials/components/menu.html
@@ -16,6 +16,7 @@
       <li><a is-active href="."><i class="fa fa-home"></i> Accueil</a></li>
       <li><a is-active href="musiques"><i class="fa fa-music"></i> Musiques</a></li>
       <li><a is-active href="playlists"><i class="fa fa-list"></i> Playlists</a></li>
+      <li><a is-active href="search"><i class="fa fa-search"></i> Recherche</a></li>
       <li ng-show="!isLogged"><a href="identification"><i class="fa fa-power-off" aria-hidden="true"></i> Connexion</a></li>
       <li class="dropdown" ng-show="isLogged">
         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{ utilisateur.pseudo }}</a>
